--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "vk_agregator",
   "version": "0.1.0",
   "private": true,
@@ -16,5 +15,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
